--- a/src/sass/base/_settings.sass
+++ b/src/sass/base/_settings.sass
@@ -1,5 +1,5 @@
 body
-  font-family: 'Roboto', sans-serif
+  font-family: 'PT Sans Narrow', sans-serif
   font-weight: 400
   font-size: 16px
   color: $color-black
