--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -5,6 +5,8 @@
 @import './components/header'
 @import './components/footer'
 
+@import './components/hero'
+
 // media import
 @import './media/1200'
 @import './media/1024'
