--- a/src/sass/components/_header.sass
+++ b/src/sass/components/_header.sass
@@ -58,7 +58,12 @@
 
   &-white
     color: #fff
-    border-color: rgba(255,255,255,.1)
+    border-color: rgba(255,255,255,.5)
+    position: absolute
+    top: 0
+    left: 0
+    right: 0
+    z-index: 100
     .header-logo
       background-image: url(../img/svg/logo-white.svg)
     .header-buttons__search::before
