--- a/src/components/header.html
+++ b/src/components/header.html
@@ -1,4 +1,4 @@
-<header class="header">
+<header class="header{% if header_white %} header-white{% endif %}">
   <div class="container">
     <a href="/" class="header-logo"></a>
     <ul class="header-nav">
