--- a/src/sass/components/_hero.sass
+++ b/src/sass/components/_hero.sass
@@ -5,6 +5,7 @@
   background: url(../img/hero-bg.jpg) no-repeat top center
   background-size: cover
   position: relative
+  margin-bottom: 173px
   &::before
     content: ''
     position: absolute
