--- a/src/sass/base/_settings.sass
+++ b/src/sass/base/_settings.sass
@@ -53,7 +53,44 @@ body
   padding: 16px 60px
   font-size: 16px
 
+.btn-promo
+  padding: 20px 40px
+  font-size: 18px
+
+.title-lg
+  font-size: 48px
+  font-weight: 700
+
 .title-md
   font-size: 32px
   font-weight: 700
   line-height: 1
+
+.title-sm
+  font-size: 18px
+  font-weight: 700
+
+.control
+  @include flexbox
+  align-items: center
+  &-arrow
+    width: 40px
+    height: 40px
+    background-color: rgba(0,0,0,.7)
+    background-image: url(../img/svg/control-arrow.svg)
+    background-repeat: no-repeat
+    background-position: center
+    cursor: pointer
+    transition: .2s
+    &:last-child
+      transform: rotate(180deg)
+    &.swiper-button-disabled
+      background-color: rgba(0,0,0,.4)
+      cursor: default
+  &-count
+    margin: 0 20px
+    font-size: 18px
+    width: initial
+    .swiper-pagination-current
+      font-size: 24px
+      font-weight: 700
