--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -6,6 +6,7 @@
 @import './components/footer'
 
 @import './components/hero'
+@import './components/promo'
 
 // media import
 @import './media/1200'
