fix color hero-consult__input

--- a/src/sass/components/_hero.sass
+++ b/src/sass/components/_hero.sass
@@ -50,6 +50,7 @@
       font-size: 14px
       font-weight: 700
       margin: 0 10px
+      color: $color-black
       @include placeholder
         color: #bdbdbd
     &__or
