--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -7,6 +7,7 @@
 
 @import './components/hero'
 @import './components/promo'
+@import './components/product'
 
 // media import
 @import './media/1200'
