--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -8,6 +8,7 @@
 @import './components/hero'
 @import './components/promo'
 @import './components/product'
+@import './components/benefit'
 
 // media import
 @import './media/1200'
