--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -9,6 +9,8 @@
 @import './components/promo'
 @import './components/product'
 @import './components/benefit'
+@import './components/special'
+@import './components/catalog'
 
 // media import
 @import './media/1200'
