--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -11,6 +11,7 @@
 @import './components/benefit'
 @import './components/special'
 @import './components/catalog'
+@import './components/spruce'
 
 // media import
 @import './media/1200'
