--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -12,6 +12,7 @@
 @import './components/special'
 @import './components/catalog'
 @import './components/spruce'
+@import './components/cta'
 
 // media import
 @import './media/1200'
