--- a/src/sass/base/_settings.sass
+++ b/src/sass/base/_settings.sass
@@ -112,3 +112,11 @@ body
     .swiper-pagination-current
       font-size: 24px
       font-weight: 700
+
+.input
+  width: 100%
+  height: 48px
+  border: 1px solid $color-black
+  padding: 0 20px
+  font-size: 14px
+  font-weight: 700
