--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -13,6 +13,7 @@
 @import './components/catalog'
 @import './components/spruce'
 @import './components/cta'
+@import './components/seo'
 
 // media import
 @import './media/1200'
