--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -14,6 +14,7 @@
 @import './components/spruce'
 @import './components/cta'
 @import './components/seo'
+@import './components/help'
 
 // media import
 @import './media/1200'
