--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -15,6 +15,7 @@
 @import './components/cta'
 @import './components/seo'
 @import './components/help'
+@import './components/head'
 
 // media import
 @import './media/1200'
