--- a/src/components/catalog-section__item.html
+++ b/src/components/catalog-section__item.html
@@ -1,7 +1,7 @@
-<div class="catalog-section">
-  <img src="img/product-item.jpg" alt="" class="catalog-section__img">
-  <a href="#" class="catalog-section__title">Пиломатериалы строганые</a>
-  <ul class="catalog-section__list">
+<div class="catalog-section__item">
+  <img src="img/product-item.jpg" alt="" class="catalog-section__item-img">
+  <a href="#" class="catalog-section__item-title">Пиломатериалы строганые</a>
+  <ul class="catalog-section__item-list">
     <li>Доска строганая</li>
     <li>Дюймовка строганая</li>
     <li>Имитация бруса</li>
