--- a/src/sass/components/_catalog.sass
+++ b/src/sass/components/_catalog.sass
@@ -162,30 +162,31 @@
     @include flexbox
     margin: 0 -10px
   &-section
-    width: calc(100% / 3 - 20px)
-    margin: 30px 10px 0
-    border: 3px solid $color-black
-    padding: 20px
-    position: relative
-    &__img
-      height: 85px
-    &__title
-      font-size: 24px
-      font-weight: 700
-      margin-top: 10px
-      display: block
-      &::before
-        content: ''
-        position: absolute
-        top: 0
-        left: 0
-        right: 0
-        bottom: 0
-        z-index: 10
-    &__list
-      list-style-type: disc
-      padding-left: 17px
-      font-size: 18px
-      font-weight: 700
-      li
+    &__item
+      width: calc(100% / 3 - 20px)
+      margin: 30px 10px 0
+      border: 3px solid $color-black
+      padding: 20px
+      position: relative
+      &-img
+        height: 85px
+      &-title
+        font-size: 24px
+        font-weight: 700
         margin-top: 10px
+        display: block
+        &::before
+          content: ''
+          position: absolute
+          top: 0
+          left: 0
+          right: 0
+          bottom: 0
+          z-index: 10
+      &-list
+        list-style-type: disc
+        padding-left: 17px
+        font-size: 18px
+        font-weight: 700
+        li
+          margin-top: 10px
