--- a/src/sass/components/_catalog.sass
+++ b/src/sass/components/_catalog.sass
@@ -162,6 +162,7 @@
     @include flexbox
     margin: 0 -10px
   &-section
+    padding-top: 80px
     &__item
       width: calc(100% / 3 - 20px)
       margin: 30px 10px 0
@@ -190,3 +191,119 @@
         font-weight: 700
         li
           margin-top: 10px
+    &__result
+      @include flexbox
+      margin: 20px -10px 0
+      .catalog-item
+        width: calc(100% / 3 - 20px)
+        margin: 20px 10px 0
+      .promo-slider
+        width: calc(100% - 20px)
+        margin: 20px 10px 0
+    &__list
+      margin-top: 30px
+      &-open
+        display: block
+        height: 44px
+        width: 290px
+        background: #e3e3e3 url(../img/svg/open-triangle.svg) no-repeat bottom right
+        font-size: 14px
+        font-weight: 700
+        line-height: 1
+        @include flexbox
+        align-items: center
+        padding: 0 20px
+        cursor: pointer
+      &-close
+        position: absolute
+        bottom: 0
+        right: 0
+        width: 40px
+        height: 40px
+        background: url(../img/svg/close-brown.svg) no-repeat center
+        cursor: pointer
+      &-content
+        background: #e3e3e3
+        padding: 20px 40px 40px
+        display: none
+        // margin-top: -44px
+        // top: -44px
+        position: relative
+        z-index: 10
+        ul
+          @include flexbox
+          align-items: flex-start
+          font-size: 16px
+          font-weight: 700
+          li
+            list-style-type: disc
+            width: calc(100% / 3 - 17px)
+            margin-left: 17px
+            margin-top: 20px
+    &__filter
+      @include flexbox
+      align-items: center
+      margin-top: 40px
+      &-select
+        flex: 1
+        height: 42px
+        border: 1px solid $color-brown
+        -webkit-appearance: none
+        padding-left: 20px
+        font-size: 14px
+        font-weight: 700
+        margin-right: 20px
+        background: #fff url(../img/svg/select-arrow.svg) no-repeat right 11px center
+      .btn-outline
+        height: 42px
+        width: 170px
+        font-size: 12px
+        margin-left: 20px
+        &::after
+          width: 12px
+          height: 9px
+          background-size: 12px
+      &-clear
+        width: 42px
+        height: 42px
+        margin-left: 40px
+        border-radius: 9999px
+        border: 1px solid #c5c5c5
+        cursor: pointer
+        background: url(../img/svg/trash.svg) no-repeat center
+    &__subfilter
+      margin-top: 40px
+      @include flexbox
+      align-items: center
+    &__grid
+      @include flexbox
+      align-items: center
+      &-tile
+        width: 16px
+        height: 16px
+        background: url(../img/svg/tile-outline.svg) no-repeat
+        cursor: pointer
+        &.active
+          background: url(../img/svg/tile-fill.svg) no-repeat
+      &-simple
+        width: 16px
+        height: 16px
+        background: url(../img/svg/simple-outline.svg) no-repeat
+        cursor: pointer
+        margin-left: 8px
+        &.active
+          background: url(../img/svg/simple-fill.svg) no-repeat
+    &__sort
+      @include flexbox
+      align-items: center
+      margin-left: 20px
+      b
+        font-size: 14px
+        line-height: 1
+        color: #828282
+        margin-right: 10px
+        font-weight: 700
+      select
+        font-size: 14px
+        text-decoration: underline
+        font-weight: 700
