fix catalog item

--- a/src/components/catalog-item.html
+++ b/src/components/catalog-item.html
@@ -6,7 +6,7 @@
   </div>
   <div class="catalog-item__info">
     <div class="catalog-item__size">20<span>х</span>195<span>х</span>3050</div>
-    <div class="catalog-item__title">Имитация (имитатор) бруса</div>
+    <a href="#" class="catalog-item__title">Имитация (имитатор) бруса</a>
     <div class="catalog-item__subtitle">Карельский профиль</div>
     <div class="catalog-item__desc">Полезная ширина 177</div>
   </div>
