--- a/src/sass/components/_catalog.sass
+++ b/src/sass/components/_catalog.sass
@@ -5,6 +5,9 @@
     background: #fff
     transition: .2s
     position: relative
+    @include flexbox
+    align-items: flex-start
+    flex-direction: column
     &:hover
       box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15)
     &.focus
@@ -55,6 +58,7 @@
     &__top
       @include flexbox
       align-items: center
+      width: 100%
     &__action
       font-size: 22px
       padding: 0 10px 2px
@@ -65,6 +69,7 @@
     &__sort
       margin-left: 20px
     &__info
+      width: 100%
       margin-top: 16px
     &__size
       font-size: 32px
@@ -79,6 +84,10 @@
       font-size: 24px
       font-weight: 700
       margin-top: 15px
+      display: -webkit-box
+      -webkit-line-clamp: 2
+      -webkit-box-orient: vertical
+      overflow: hidden
     &__subtitle
       font-size: 18px
       font-weight: 700
@@ -86,9 +95,11 @@
     &__desc
       margin-top: 5px
     &__price
+      width: 100%
       font-weight: 700
       @include flexbox
       align-items: flex-start
+      margin-bottom: auto
       li
         margin-right: 30px
         margin-top: 15px
@@ -102,6 +113,7 @@
         font-size: 14px
         line-height: 1
     &__calc
+      width: 100%
       @include flexbox
       align-items: flex-start
       margin-top: 20px
@@ -138,6 +150,7 @@
         margin: 0 5px
         padding-top: 3px
     &__buttons
+      width: 100%
       justify-content: space-between
       .btn
         width: calc(100% / 2 - 10px)
