--- a/src/components/promo-item.html
+++ b/src/components/promo-item.html
@@ -3,5 +3,5 @@
   <h3 class="title-md">Получи индивидуальное<br> предложение</h3>
   <h2 class="title-lg">при заказе от 500 000 р.</h2>
   <h4 class="title-sm">c 02.02.2022 по 02.03.2022</h4>
-  <div class="btn-wrap"><a href="#" class="btn btn-green btn-promo"><p>Подробнее об акции</p></a></div>
+  <div class="btn-wrap"><a href="javascript:;" data-fancybox data-src="#popup-promo-1" class="btn btn-green btn-promo"><p>Подробнее об акции</p></a></div>
 </div>
