--- a/src/sass/components/_promo.sass
+++ b/src/sass/components/_promo.sass
@@ -10,6 +10,7 @@
     height: 415px
     padding: 50px
     position: relative
+    z-index: 10
     color: #fff
     img
       position: absolute
@@ -41,3 +42,9 @@
     right: 30px
     z-index: 100
     color: #fff
+
+  &-list
+    .promo-item
+      margin-top: 40px
+      &:first-child
+        margin-top: 0
