--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -16,6 +16,7 @@
 @import './components/seo'
 @import './components/help'
 @import './components/head'
+@import './components/popup'
 
 // media import
 @import './media/1200'
