--- a/src/components/popup.html
+++ b/src/components/popup.html
@@ -1,4 +1,4 @@
-<div class="popup-promo" id="popup-promo-1">
+<div class="popup popup-promo" id="popup-promo-1">
   <div class="promo-item">
     <img src="img/promo-item.jpg" alt="">
     <h3 class="title-md">Получи индивидуальное<br> предложение</h3>
