--- a/src/sass/base/_settings.sass
+++ b/src/sass/base/_settings.sass
@@ -120,6 +120,8 @@ body
   padding: 0 20px
   font-size: 14px
   font-weight: 700
+  @include placeholder
+    color: #c5c5c5
 
 .swiper-notification
   display: none !important
