--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -17,6 +17,7 @@
 @import './components/help'
 @import './components/head'
 @import './components/popup'
+@import './components/search'
 
 // media import
 @import './media/1200'
