--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -18,6 +18,7 @@
 @import './components/head'
 @import './components/popup'
 @import './components/search'
+@import './components/price'
 
 // media import
 @import './media/1200'
