--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -19,6 +19,7 @@
 @import './components/popup'
 @import './components/search'
 @import './components/price'
+@import './components/contact'
 
 // media import
 @import './media/1200'
