--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -20,6 +20,7 @@
 @import './components/search'
 @import './components/price'
 @import './components/contact'
+@import './components/item'
 
 // media import
 @import './media/1200'
