--- a/src/sass/components/_special.sass
+++ b/src/sass/components/_special.sass
@@ -1,13 +1,14 @@
 .special
   padding-top: 80px
-  .swiper-wrapper
-    margin: 30px 0
-  .swiper-slide
-    opacity: 0
-    visibility: hidden
-    transition: .3s
-  .swiper-slide-active, .swiper-slide-next, .swiper-slide-next + .swiper-slide
-    opacity: 1
-    visibility: visible
+  &-slider
+    .swiper-wrapper
+      margin: 30px 0
+    .swiper-slide
+      opacity: 0
+      visibility: hidden
+      transition: .3s
+    .swiper-slide-active, .swiper-slide-next, .swiper-slide-next + .swiper-slide
+      opacity: 1
+      visibility: visible
   &-control
     justify-content: center
