--- a/src/sass/base/_settings.sass
+++ b/src/sass/base/_settings.sass
@@ -27,7 +27,7 @@ body
   display: block
   border: 1px solid #000
   cursor: pointer
-  transition: .2s
+  // transition: .2s
   &-green
     background: $color-green
     border-color: $color-green
