--- a/src/components/catalog-item.html
+++ b/src/components/catalog-item.html
@@ -1,29 +1,5 @@
 <div class="catalog-item">
-  <div class="catalog-item__wishlist"></div>
-  <div class="catalog-item__top">
-    <div class="catalog-item__action">Акция</div>
-    <div class="catalog-item__sort">Сорт АВ</div>
-  </div>
-  <div class="catalog-item__info">
-    <div class="catalog-item__size">20<span>х</span>195<span>х</span>3050</div>
-    <a href="#" class="catalog-item__title">Имитация (имитатор) бруса</a>
-    <div class="catalog-item__subtitle">Карельский профиль</div>
-    <div class="catalog-item__desc">Полезная ширина 177</div>
-  </div>
-  <ul class="catalog-item__price">
-    <li>
-      <b><span class="triplets">3229</span>₽</b>
-      <p>за м.кв</p>
-    </li>
-    <li>
-      <b><span class="triplets">30229</span>₽</b>
-      <p>за м.куб.</p>
-    </li>
-    <li>
-      <b><span class="triplets">129</span>₽</b>
-      <p>за шт.</p>
-    </li>
-  </ul>
+  {% include 'components/catalog-item__info.html' %}
   <div class="catalog-item__calc">
     <h4>Посчитать, сколько нужно:</h4>
     <label class="catalog-item__calc-label">
@@ -46,7 +22,7 @@
       <p>шт.</p>
     </label>
   </div>
-  <div class="catalog-item__result">Итоговая стоимость <b><span class="triplets">0</span> ₽</b></div>
+  {# <div class="catalog-item__result">Итоговая стоимость <b><span class="triplets">0</span> ₽</b></div> #}
   <div class="btn-wrap catalog-item__buttons">
     <a href="#" class="btn btn-outline"><p>Подробнее</p></a>
     <a href="#" class="btn btn-green"><p>В смету</p></a>
