--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -21,6 +21,7 @@
 @import './components/price'
 @import './components/contact'
 @import './components/item'
+@import './components/success'
 
 // media import
 @import './media/1200'
