--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -22,6 +22,7 @@
 @import './components/contact'
 @import './components/item'
 @import './components/success'
+@import './components/order'
 
 // media import
 @import './media/1200'
