--- a/src/components/header.html
+++ b/src/components/header.html
@@ -13,5 +13,37 @@
       <a href="#" class="header-buttons__item header-buttons__wishlist"></a>
       <a href="#" class="header-buttons__item header-buttons__cart"></a>
     </div>
+    <div class="header-cart">
+      <div class="header-cart__item">
+        <div class="header-cart__name">
+          <h3>Имитация (имитатор) бруса</h3>
+          <h4>Карельский профиль</h4>
+        </div>
+        <div class="header-cart__total">
+          <h3>129 шт.</h3>
+          <h4>12 956 ₽</h4>
+        </div>
+      </div>
+      <div class="header-cart__item">
+        <div class="header-cart__name">
+          <h3>Имитация (имитатор) бруса</h3>
+          <h4>Карельский профиль</h4>
+        </div>
+        <div class="header-cart__total">
+          <h3>129 шт.</h3>
+          <h4>12 956 ₽</h4>
+        </div>
+      </div>
+      <div class="header-cart__item">
+        <div class="header-cart__name">
+          <h3>Имитация (имитатор) бруса</h3>
+          <h4>Карельский профиль</h4>
+        </div>
+        <div class="header-cart__total">
+          <h3>129 шт.</h3>
+          <h4>12 956 ₽</h4>
+        </div>
+      </div>
+    </div>
   </div>
 </header>
