--- a/src/sass/components/_item.sass
+++ b/src/sass/components/_item.sass
@@ -67,6 +67,8 @@
       margin-top: 30px
       width: 160px
       height: 42px
+    .catalog-item__title
+      -webkit-line-clamp: inherit
   &-calc
     @include flexbox
     margin-top: 20px
