--- a/src/components/header.html
+++ b/src/components/header.html
@@ -2,7 +2,7 @@
   <div class="container">
     <a href="/" class="header-logo"></a>
     <ul class="header-nav">
-      <li><a href="#">Каталог</a></li>
+      <li class="js-catalog"><a href="#"><span class="header-catalog__icon"></span>Каталог</a></li>
       <li><a href="#">Акции</a></li>
       <li><a href="#">Прайс-лист</a></li>
       <li><a href="#">Контакты</a></li>
@@ -12,6 +12,31 @@
       <a href="#" class="header-buttons__item header-buttons__search"></a>
       <a href="#" class="header-buttons__item header-buttons__wishlist"></a>
       <a href="#" class="header-buttons__item header-buttons__cart"></a>
+    </div>
+    <div class="header-catalog">
+      <div class="header-catalog__row">
+        <ul class="header-catalog__main">
+          <li data-menu="1"><a href="#">Пиломатериалы строганые</a></li>
+          <li data-menu="2"><a href="#">Пиломатериалы сухие</a></li>
+          <li data-menu="3"><a href="#">Пиломатериалы естественной влажности</a></li>
+        </ul>
+        <ul class="header-catalog__sub" data-menu="1">
+          <li><a href="#">Доска строганая</a></li>
+          <li><a href="#">Дюймовка строганая</a></li>
+          <li><a href="#">Имитация бруса</a></li>
+        </ul>
+        <ul class="header-catalog__sub" data-menu="2">
+          <li><a href="#">Планкен</a></li>
+          <li><a href="#">Террасная доска</a></li>
+          <li><a href="#">Палубная доска</a></li>
+          <li><a href="#">Имитация бревна</a></li>
+        </ul>
+        <ul class="header-catalog__sub" data-menu="3">
+          <li><a href="#">Строганые брусок и рейка</a></li>
+          <li><a href="#">Скандинавская доска</a></li>
+          <li><a href="#">Брус строганый</a></li>
+        </ul>
+      </div>
     </div>
     <div class="header-cart">
       <div class="header-cart__item">
