--- a/src/sass/components/_header.sass
+++ b/src/sass/components/_header.sass
@@ -103,6 +103,8 @@
       background-image: url(../img/svg/search-white.svg)
     .header-buttons__wishlist::before
       background-image: url(../img/svg/wishlist-white.svg)
+    .header-catalog__icon
+      filter: invert(100%) sepia(0%) saturate(7469%) hue-rotate(39deg) brightness(101%) contrast(107%)
 
   &-cart
     position: absolute
@@ -177,6 +179,7 @@
     font-weight: 700
     width: 720px
     display: none
+    box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15)
     li
       margin-top: 20px
       &:first-child
@@ -193,6 +196,7 @@
       margin-top: -4px
       display: inline-block
       vertical-align: middle
+      transition: .2s
     &__row
       @include flexbox
     &__main
@@ -206,7 +210,12 @@
       flex: 1
       display: none
 
-.js-catalog.active a
-  color: #fff
-  &::before
-    opacity: 1
+.js-catalog
+  &.active a
+    color: #fff
+    &::before
+      opacity: 1
+    .header-catalog__icon
+      filter: invert(100%) sepia(0%) saturate(7469%) hue-rotate(39deg) brightness(101%) contrast(107%)
+  a:hover .header-catalog__icon
+    filter: invert(100%) sepia(0%) saturate(7469%) hue-rotate(39deg) brightness(101%) contrast(107%)
