--- a/src/sass/components/_order.sass
+++ b/src/sass/components/_order.sass
@@ -5,7 +5,7 @@
     align-items: flex-start
   &-content
     max-width: 800px
-    width: calc(100% - 290px)
+    width: calc(100% - 290px - 40px)
   &-sidebar
     max-width: 290px
     margin-left: auto
