--- a/src/sass/media/_1200.sass
+++ b/src/sass/media/_1200.sass
@@ -1,3 +1,36 @@
 @media (max-width: 1199px)
   .container
     max-width: 1024px
+
+  .header-nav li a::before
+    left: -20px
+    right: -20px
+  .header-nav li
+    margin-right: 40px
+  .header-nav
+    margin-left: 60px
+  .header-catalog
+    left: 210px
+
+  .cta-content
+    max-width: 500px
+  .cta-img
+    width: calc(100% - 500px)
+
+  .catalog-section__filter .btn-outline
+    margin-left: 0
+  .catalog-section__filter-clear
+    margin-left: 20px
+
+  .contact-form
+    right: 0
+  .contact-address
+    max-width: 360px
+
+  .item-photo
+    max-width: 500px
+  .item-info
+    width: calc(100% - 500px - 40px)
+
+  .order-delivery__address
+    margin-right: 0
