--- a/src/components/header.html
+++ b/src/components/header.html
@@ -12,6 +12,7 @@
       <a href="#" class="header-buttons__item header-buttons__search"></a>
       <a href="#" class="header-buttons__item header-buttons__wishlist"></a>
       <a href="#" class="header-buttons__item header-buttons__cart"></a>
+      <div class="header-buttons__item header-buttons__burger"></div>
     </div>
     <div class="header-catalog">
       <div class="header-catalog__row">
