--- a/src/sass/components/_special.sass
+++ b/src/sass/components/_special.sass
@@ -7,8 +7,20 @@
       opacity: 0
       visibility: hidden
       transition: .3s
-    .swiper-slide-active, .swiper-slide-next, .swiper-slide-next + .swiper-slide
+    .swiper-slide-active
       opacity: 1
       visibility: visible
   &-control
     justify-content: center
+
+@media(min-width: 1024px)
+  .special-slider
+    .swiper-slide-next, .swiper-slide-next + .swiper-slide
+      opacity: 1
+      visibility: visible
+
+@media(min-width: 768px)
+  .special-slider
+    .swiper-slide-next
+      opacity: 1
+      visibility: visible
