--- a/src/sass/components/_header.sass
+++ b/src/sass/components/_header.sass
@@ -88,6 +88,11 @@
     &__cart
       &::before
         background-image: url(../img/svg/cart-white.svg)
+    &__burger
+      display: none
+      &::before
+        background-image: url(../img/svg/catalog.svg)
+        filter: invert(100%) sepia(0%) saturate(7469%) hue-rotate(39deg) brightness(101%) contrast(107%)
 
   &-white
     color: #fff
