--- a/src/sass/components/_hero.sass
+++ b/src/sass/components/_hero.sass
@@ -58,3 +58,10 @@
       font-weight: 700
     .btn-consult
       margin-left: 10px
+
+  &-mob
+    display: none
+    .btn
+      margin-left: 0
+    .btn-wrap
+      margin-top: 30px !important
