--- a/src/sass/media/_768.sass
+++ b/src/sass/media/_768.sass
@@ -1,3 +1,133 @@
 @media (max-width: 767px)
   .container
     max-width: 576px
+
+  .header-buttons__item
+    width: 40px
+    height: 40px
+  .header-buttons__item::before
+    width: 38px
+    height: 38px
+  .header
+    padding: 15px 0
+  .hero-title
+    font-size: 48px
+    max-width: 400px
+  .header-logo
+    height: 40px
+    width: 130px
+    background-size: auto 40px
+
+  .hero
+    padding-top: 130px
+    height: 560px
+  .hero .btn-wrap
+    margin-top: 40px
+  .btn
+    font-size: 14px !important
+    padding: 16px 40px !important
+
+  .hero-consult
+    padding: 30px
+    margin-top: 80px
+
+  .hero-consult__form
+    display: none
+  .hero-mob
+    display: block
+
+  .promo-item
+    padding: 30px
+
+  .title-md
+    font-size: 24px
+  .title-lg
+    font-size: 32px
+
+  .promo-item,
+  .promo-slider
+    height: 350px
+
+  .product-item
+    width: calc(100% / 2 - 20px)
+
+  .benefit-row .benefit-item
+    width: calc(100% - 20px)
+
+  .help-text h2
+    font-size: 42px
+
+  .footer .container
+    flex-direction: column
+    align-items: center
+
+  .footer-time
+    margin-top: 30px
+    text-align: center
+
+  .footer-copyright
+    order: 2
+    text-align: center
+  .footer-contact
+    order: 1
+    margin-top: 30px
+  .footer-nav
+    text-align: center
+    font-size: 18px
+    margin-top: 30px
+    li
+      margin-top: 15px
+
+  .catalog-section__item, .catalog-section__result .catalog-item
+    width: calc(100% - 20px)
+
+  .catalog-section__list-content ul li
+    width: calc(100% / 2 - 17px)
+
+  .contact-connect
+    max-width: 100%
+  .contact-address
+    max-width: 100%
+    margin-left: 0
+    margin-top: 40px
+
+  .contact
+    padding-top: 40px
+
+  .contact-map
+    height: 300px
+
+  .search-form .btn
+    padding: 0 !important
+
+  .success .container h2
+    font-size: 48px
+
+  .price-table__col span
+    display: none
+
+  .price-table__col
+    width: 80px
+
+  .item-photo img
+    height: 280px
+
+  .item-info .btn-green
+    padding: 0 !important
+  .item-spec__tabs li
+    margin: 0
+    flex: 1
+    font-size: 16px
+  .item-spec__list,
+  .item-spec__text
+    font-size: 14px
+
+  .order-content
+    max-width: 100%
+    width: 100%
+
+  .order-sidebar
+    max-width: 100%
+    margin-top: 40px
+    border-top: 1px solid #1F1712
+    padding-top: 40px
