--- a/src/sass/media/_576.sass
+++ b/src/sass/media/_576.sass
@@ -1,3 +1,22 @@
 @media (max-width: 575px)
   .container
     max-width: 475px
+
+  .popup-promo
+    padding: 20px
+
+  .search-form .input
+    max-width: 100%
+    margin-right: 0
+    margin-bottom: 20px
+
+  .price-table__col
+    width: 70px
+
+  .price-footer__col
+    width: 100%
+
+  .price-footer__col:nth-child(3)
+    justify-content: center
+    order: -1
+    margin-bottom: 20px
