--- a/src/sass/media/_475.sass
+++ b/src/sass/media/_475.sass
@@ -1,3 +1,55 @@
 @media (max-width: 474px)
   .container
     max-width: 100%
+
+  .product-item
+    width: calc(100% - 20px)
+
+  .catalog-item__buttons .btn
+    padding-left: 0 !important
+    padding-right: 0 !important
+
+  .catalog-item__title
+    font-size: 22px
+
+  .title-lg
+    line-height: 1
+
+  .cta h3
+    font-size: 18px
+    line-height: 1
+
+  .help-block
+    padding: 60px 30px
+    background: linear-gradient(138.75deg, rgba(0, 0, 0, 0.45) 37.15%, rgba(0, 0, 0, 0) 56.72%), url(../img/help-bg.jpg) no-repeat center
+  .help-text h2
+    font-size: 36px
+  .help-text h3
+    font-size: 18px
+    line-height: 1
+
+  .head-bg::before
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0.6) 0%, rgba(0, 0, 0, 0) 100%)
+
+  .catalog-section__list-open
+    width: 100%
+  .catalog-section__list
+    margin-top: 20px
+
+  .catalog-section__list-content ul li
+    width: 100%
+
+  .item-calc__total
+    width: 100%
+    padding: 15px
+
+  .item-spec__list
+    width: 100%
+    li
+      margin-top: 10px
+
+@media(max-width: 400px)
+  .catalog-section__filter-btn
+    width: 100%
+    margin-bottom: 20px
+    order: -1
