--- a/src/components/header.html
+++ b/src/components/header.html
@@ -73,3 +73,51 @@
     </div>
   </div>
 </header>
+
+<div class="header-burger">
+  <div class="container">
+    <div class="header-buttons__item header-burger__close"></div>
+    <ul class="header-burger__menu">
+      <li>
+        <a href="#" class="js-open-menu"><span class="header-catalog__icon"></span>Каталог</a>
+        <ul class="header-burger__submenu">
+          <li>
+            <a href="#" class="js-open-menu">Пиломатериалы строганые</a>
+            <ul class="header-burger__submenu">
+              <li><a href="#">Доска строганая</a></li>
+              <li><a href="#">Дюймовка строганая</a></li>
+              <li><a href="#">Имитация бруса</a></li>
+              <li><a href="#">Планкен</a></li>
+              <li><a href="#">Террасная доска</a></li>
+              <li><a href="#">Палубная доска</a></li>
+              <li><a href="#">Имитация бревна</a></li>
+              <li><a href="#">Строганые брусок и рейка</a></li>
+              <li><a href="#">Скандинавская доска</a></li>
+              <li><a href="#">Брус строганый</a></li>
+            </ul>
+          </li>
+          <li>
+            <a href="#" class="js-open-menu">Пиломатериалы сухие</a>
+            <ul class="header-burger__submenu">
+              <li><a href="#">Какой-то раздел</a></li>
+              <li><a href="#">Какой-то раздел</a></li>
+              <li><a href="#">Какой-то раздел</a></li>
+            </ul>
+          </li>
+          <li>
+            <a href="#" class="js-open-menu">Пиломатериалы естественной влажности</a>
+            <ul class="header-burger__submenu">
+              <li><a href="#">Какой-то раздел</a></li>
+              <li><a href="#">Какой-то раздел</a></li>
+              <li><a href="#">Какой-то раздел</a></li>
+            </ul>
+          </li>
+        </ul>
+      </li>
+      <li><a href="#">Акции</a></li>
+      <li><a href="#">Прайс-лист</a></li>
+      <li><a href="#">Контакты</a></li>
+    </ul>
+    <div class="header-burger__phone"><a href="tel:+7-123-456-78-90">+7-123-456-78-90</a></div>
+  </div>
+</div>
