--- a/src/sass/base/_settings.sass
+++ b/src/sass/base/_settings.sass
@@ -219,3 +219,6 @@ body
   margin-right: 20px
   background: #fff url(../img/svg/select-arrow.svg) no-repeat right 11px center
   width: 100%
+
+.overflow
+  overflow: hidden
