--- a/src/sass/components/_header.sass
+++ b/src/sass/components/_header.sass
@@ -215,6 +215,45 @@
       flex: 1
       display: none
 
+  &-burger
+    position: fixed
+    top: 0
+    left: 0
+    right: 0
+    bottom: 0
+    overflow: auto
+    background: #fff
+    z-index: 1000
+    padding: 20px 0 40px
+    display: none
+    &__menu
+      font-size: 18px
+      font-weight: 700
+      li
+        margin-top: 20px
+        &:first-child
+          margin-top: 0
+        a
+          transition: .2s
+          &:hover
+            color: $color-green
+    &__close
+      margin-left: auto !important
+      margin-bottom: 20px
+      &::before
+        background-image: url(../img/svg/burger-close.svg)
+    &__phone
+      font-size: 18px
+      font-weight: 700
+      padding-top: 40px
+      border-top: 1px solid $color-gray
+      margin-top: 40px
+    &__submenu
+      margin-left: 20px
+      margin-top: 20px
+      font-size: 14px
+      display: none
+
 .js-catalog
   &.active a
     color: #fff
