--- a/src/sass/media/_1024.sass
+++ b/src/sass/media/_1024.sass
@@ -91,7 +91,31 @@
   .catalog-section__sort
     margin-left: 0
   .catalog-section__filter
+    // flex-direction: column
+    align-items: flex-start
+    margin: 0
     display: none
+    position: relative
+    overflow: hidden
+
+  .catalog-section__list
+    margin-bottom: 20px
+
+  .catalog-section__filter-select
+    flex: initial
+    width: 100%
+    height: 42px
+    margin-bottom: 20px
+    margin-right: 0
+
+  .catalog-section__filter .btn-outline
+    padding: 0 !important
+
+  .catalog-section__filter-clear
+    position: absolute
+    bottom: 0
+    right: 0
+    margin: 0
 
   .catalog-section__filter-btn
     display: flex
