--- a/src/components/popup.html
+++ b/src/components/popup.html
@@ -26,3 +26,38 @@
     </div>
   </div>
 </div>
+
+<div class="popup popup-sm" id="popup-help">
+  <h2 class="title-md">Помощь в подборе</h2>
+  <h3 class="title-sm">Как с вами связаться?</h3>
+  <form action="#">
+    <input type="text" class="input" placeholder="Имя" />
+    <input type="tel" class="input masked" placeholder="+7 (___) ___-__-__" />
+    <input type="email" class="input" placeholder="E-mail" />
+    <label class="checkbox">
+      <input type="checkbox" />
+      <p>Согласен на обработку персональных данных</p>
+    </label>
+    <h4>Мы свяжемся с вами<br> в течение 30 минут.</h4>
+    <button class="btn btn-green"><p>Получить консультацию</p></button>
+  </form>
+</div>
+
+<div class="popup popup-sm" id="popup-call">
+  <h2 class="title-md">Заказать звонок</h2>
+  <h3 class="title-sm">Мы свяжемся с вами в течение 1 минуты!</h3>
+  <form action="#">
+    <input type="tel" class="input masked" placeholder="+7 (___) ___-__-__" />
+    <label class="checkbox">
+      <input type="checkbox" />
+      <p>Согласен на обработку персональных данных</p>
+    </label>
+    <button class="btn btn-green"><p>Заказать звонок</p></button>
+  </form>
+</div>
+
+<div class="popup popup-sm" id="popup-thanks">
+  <h2 class="title-md">Ваша заявка отправлена!</h2>
+  <h3 class="title-sm">Мы свяжемся с вами в течение 2 часов!</h3>
+  <div class="btn-wrap"><a href="javascript:;" onclick="$.fancybox.close();" class="btn btn-green"><p>Вернуться</p></a></div>
+</div>
