--- a/src/sass/components/_popup.sass
+++ b/src/sass/components/_popup.sass
@@ -14,3 +14,30 @@
           margin-top: 0
     &__special
       margin-top: 40px
+
+  &-sm
+    padding: 30px
+    max-width: 350px
+    width: 100%
+    .title-sm
+      margin-top: 5px
+    form
+      margin-top: 20px
+    .input
+      margin-bottom: 20px
+    .checkbox
+      margin-bottom: 20px
+    .btn
+      width: 220px
+      height: 50px
+      margin-top: 20px
+    h4
+      font-size: 24px
+      font-weight: 700
+      line-height: 1
+
+#popup-thanks
+  text-align: center
+  padding: 40px 20px
+  .btn-wrap
+    justify-content: center
