--- a/src/sass/components/_catalog.sass
+++ b/src/sass/components/_catalog.sass
@@ -3,8 +3,9 @@
     border: 1px solid $color-gray
     padding: 20px
     background: #fff
-    // transition: .2s
+    transition: top .2s
     position: relative
+    top: 0
     @include flexbox
     align-items: flex-start
     flex-direction: column
@@ -12,6 +13,8 @@
       box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15)
     &.focus
       box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15)
+      top: -15px
+      margin-bottom: -31px !important
       .catalog-item__buttons .btn
         padding: 10px 0
       .catalog-item__result
@@ -160,6 +163,7 @@
       font-size: 14px
       font-weight: 700
       @include flexbox
+      width: 100%
       align-items: center
       justify-content: flex-end
       visibility: hidden
