--- a/src/components/catalog-item.html
+++ b/src/components/catalog-item.html
@@ -1,7 +1,7 @@
 <div class="catalog-item js-calc">
   {% include 'components/catalog-item__info.html' %}
   {% include 'components/catalog-item__calc.html' %}
-  <div class="catalog-item__result">Итоговая стоимость <b><span class="js-calc__total">0</span> ₽</b></div>
+  <div class="catalog-item__result">Итоговая стоимость <b><span class="js-calc__total"></span>₽</b></div>
   <div class="btn-wrap catalog-item__buttons">
     <a href="#" class="btn btn-outline"><p>Подробнее</p></a>
     <a href="#" class="btn btn-green"><p>В смету</p></a>
