--- a/src/components/catalog-item__calc.html
+++ b/src/components/catalog-item__calc.html
@@ -2,14 +2,16 @@
   data-thickness - толщина
   data-width - ширина
   data-length - длина
-  data-usable-width - полезная ширина
+  data-scoring-width - зачетная ширина
+  data-usable-width - полезная ширина (если нет, то поле равно зачетной ширине)
   data-price - цена за штуку
 #}
 <form class="catalog-item__calc js-calc__form"
   data-thickness="45"
   data-width="195"
   data-length="6000"
-  data-usable-width="120"
+  data-scoring-width="195"
+  data-usable-width="185"
   data-price="129"
 >
   <h4>Посчитать, сколько нужно:</h4>
