--- a/src/sass/components/_catalog.sass
+++ b/src/sass/components/_catalog.sass
@@ -97,6 +97,9 @@
       margin-top: 3px
     &__desc
       margin-top: 5px
+      &.hide
+        opacity: 0
+        cursor: default
     &__price
       width: 100%
       font-weight: 700
